@@ -86,7 +86,7 @@ a.about_data.quality	{border-left:1px solid #CCC; text-align:right; padding-righ
 .default				{width:960px; margin:0 auto; padding:0;}
 .default.head			{padding-top:20px;}
 .default.min			{padding-top:10px;}
-.default.graph			{margin-bottom:60px; margin-top:40px;}
+.default.graph			{padding-bottom:60px; padding-top:0;}
 .default.about			{padding:10px 0; text-align:right;}
 .default.data			{padding:20px 0 40px 0;}
 
