@@ -70,10 +70,10 @@ a.view_all_money:hover	{background-color:rgba(15,15,15,0.9); color:rgba(255,255,
 /*	Map styles (front page)
 	============================================= */
 .map_wrap				{background-color:rgba(0,0,0,0.8);}
-.map_info				{color:rgba(255,255,255,1); background-color:rgba(160,160,160,0.9);}
+.map_info				{color:rgba(255,255,255,1); background-color:rgba(93,93,93,0.9);}
 .map_no_info			{color:rgba(255,255,255,1);}
-.map_percent			{color:rgba(255,255,255,1); background-color:rgba(15,15,15,0.9);}
-.map_percent span		{color:rgba(255,255,255,1);}
+a.map_percent			{color:rgba(255,255,255,1); background-color:rgba(93,93,93,0.9);}
+a.map_percent span		{color:rgba(255,255,255,1);}
 
 
 /*	For url #view=map
@@ -117,8 +117,8 @@ a.read:hover			{color:rgba(255,255,255,1);}
 .list_head_title			{background-color:rgba(130,130,130,1); color:rgba(255,255,255,1);}
 .list_stats_title			{color:rgba(255,255,255,1);}
 .list_stats_num				{color:rgba(255,255,255,1);}
-a.button					{background-color:rgba(158,158,158,1); color:rgba(255,255,255,1);}
-a.button:hover				{background-color:rgba(130,130,130,1);}
+a.button					{background-color:rgba(130,130,130,1); color:rgba(255,255,255,1);}
+a.button:hover				{background-color:rgba(158,158,158,1);}
 a.csv_download				{background-color:rgba(192,192,192,0.24); color:rgba(204,204,204,1);}
 a.csv_download:hover		{background-color:rgba(184,184,184,0.49); color:rgba(255,255,255,1);}
 
@@ -278,16 +278,19 @@ iati-activity:after 	{color:rgba(204,204,204,1);}
 	============================================= */
 span.span_span-title span-title		 	{color:rgba(255,255,255,1);}
 span.span_span-title span-title:before 	{color:rgba(204,204,204,1);}
-span.span_span-title					{background-color:rgba(93,93,93,0.9);}
 
 
 /*	IATI Identifier
 	============================================= */
-iati-identifier 				{background-color: rgba(15,15,15,0.7); color:rgba(125,125,125,1);}
+iati-identifier 				{background-color: rgba(15,15,15,0.7); color:rgba(173,173,173,1);}
 iati-identifier:before			{color:rgba(204,204,204,1);}
-iati-identifier:hover			{color:rgba(173,173,173,1);}
+iati-identifier:hover			{color:rgba(255,255,255,1);}
 a.a_xml_iati-identifier:before	{color:rgba(204,204,204,1);}
 a.a_slug:before					{color:rgba(204,204,204,1);}
+a.a_xml_iati-identifier			{color:rgba(173,173,173,1);}
+a.a_slug						{color:rgba(173,173,173,1);}
+a.a_xml_iati-identifier:hover	{color:rgba(255,255,255,1);}
+a.a_slug:hover					{color:rgba(255,255,255,1);}
 
 
 /*	Recipient countries
@@ -301,16 +304,19 @@ recipient-country span:nth-of-type(2)	{color:rgba(255,255,255,1);}
 /*	Start and End dates
 	============================================= */
 span.span_activity-date						{background-color:rgba(66,66,66,0.9);}
-activity-date[type="start-actual"]			{color:rgba(255,255,255,1);}
-activity-date[type="end-actual"]			{color:rgba(255,255,255,1);}
-activity-date[type="start-actual"]:before	{color:rgba(204,204,204,1);}
+activity-date[type="1"], activity-date[type="3"], activity-date[type="start-planned"],
+activity-date[type="end-planned"]			{color:rgba(255,255,255,1);background-color:rgba(130,130,130,0.6);}
+activity-date[type="2"], activity-date[type="4"], activity-date[type="start-actual"],
+activity-date[type="end-actual"]			{color:rgba(255,255,255,1); background-color:rgba(130,130,130,1);}
+activity-date[type="1"]:before, activity-date[type="3"]:before, activity-date[type="start-planned"]:before,
+activity-date[type="end-planned"]:before, activity-date[type="2"]:before, activity-date[type="4"]:before, activity-date[type="start-actual"]:before,
 activity-date[type="end-actual"]:before		{color:rgba(204,204,204,1);}
 
 
 /*	Who's invloved?
 	============================================= */
 span.span_participating-org 					{color:rgba(255,255,255,1); background-color:rgba(56,56,56,0.4);}
-span.span_participating-org:before 				{color:rgba(255,255,255,1); border-bottom:5px solid rgba(255,255,255,1);}
+span.span_participating-org:before 				{color:rgba(255,255,255,1); border-bottom:1px solid rgba(255,255,255,1);}
 participating-org								{color:rgba(255,255,255,1);}
 participating-org[role="funding"]:after			{color:rgba(204,204,204,1);}
 participating-org[role="implementing"]:after	{color:rgba(204,204,204,1);}
@@ -320,7 +326,7 @@ participating-org[role="accountable"]:after		{color:rgba(204,204,204,1);}
 
 /*	Reported by
 	============================================= */
-reporting-org 					{color:rgba(255,255,255,1); background-color:rgba(93,93,93,0.9);}
+reporting-org 					{color:rgba(255,255,255,1);}
 reporting-org:before 			{color:rgba(204,204,204,1);}
 
 
@@ -415,7 +421,7 @@ value span			{color:rgba(204,204,204,1);}
 	============================================= */
 contact-info *						{color:rgba(255,255,255,1);}
 contact-info:nth-of-type(1):before	{color:rgba(204,204,204,1);}
-span.span_contact-info				{background-color:rgba(15,15,15,0.7);}
+span.span_contact-info				{background-color:rgbargba(56,56,56,0.9);}
 
 
 /*	Website or external links
