@@ -1,6 +1,8 @@
 Development Portal (2017-06-19 shi)
 ==============================
 Fixed input font color for generator
+Fixed margin bug for generator
+Fixed grey rgba css
 
 
 Development Portal (2017-06-16 shi)
